# docubrain-agent

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: agent.py  chat.py  documents.py  search.py
backend/app/core/: config.py
backend/app/db/: vector_store.py
backend/app/mcp/: server.py
backend/app/models/: system.py
backend/app/schemas/: chat.py  document.py  search.py
backend/app/services/: agent_runner.py  agent_tools.py  chunking.py  embeddings.py  extractor.py  generation.py  ingestion.py  mcp_client.py  search.py
frontend/: .firebaserc  package-lock.json  package.json
frontend/.firebase/: hosting.ZGlzdA.cache
frontend/src/: App.tsx  api.ts  types.ts
